# aimstletter

./: .env.example  .gitignore  README.md  pyproject.toml  run_copy_to_clipboard.bat  run_dry_run.bat  run_post_to_slack.bat  secrets.example.json  setup_windows_env.bat  setup_windows_secrets.bat
.github/workflows/: weekly-digest.yml  weekly-github-issue.yml  weekly-pages.yml
public/: index.html
public/ai-sources/: index.html
public/ai-tools/: index.html
public/archive/2026/05/week-4/: index.html
public/archive/2026/06/week-1/: index.html
public/archive/2026/06/week-2/: index.html
public/archive/2026/06/week-3/: index.html
public/archive/2026/06/week-4/: index.html
public/archive/2026/06/week-5/: index.html
public/archive/2026/07/week-1/: index.html
public/archive/2026/07/week-2/: index.html
public/archive/2026/07/week-3/: index.html
public/knowledge/context-engineering/: index.html
public/knowledge/harness-engineering/: index.html
public/knowledge/langchain/: index.html
public/knowledge/langgraph/: index.html
public/knowledge/prompt-engineering/: index.html
src/aimstletter/: __init__.py  cli.py  composer.py  config.py  fetchers.py  naver_blog.py  ranking.py  site.py  slack.py
tests/: test_naver_blog.py  test_ranking.py  test_site.py
